--- a/html5/index.html
+++ b/html5/index.html
@@ -206,31 +206,98 @@
     </article>
     <!-- title -->
     <main>
-      <section>
-        <h2>반응형 사이트 컨텐츠</h2>
-        <section>
-          <h3>반응형 사이트 왼쪽 컨텐츠</h3>
-          <article><h4>반응형 사이트 왼쪽 컨텐츠1</h4></article>
-          <article><h4>반응형 사이트 왼쪽 컨텐츠2</h4></article>
-          <article><h4>반응형 사이트 왼쪽 컨텐츠3</h4></article>
-        </section>
-        <section>
-          <h3>반응형 사이트 가운데 컨텐츠</h3>
-          <article><h4>반응형 사이트 가운데 컨텐츠1</h4></article>
-          <article><h4>반응형 사이트 가운데 컨텐츠2</h4></article>
-          <article><h4>반응형 사이트 가운데 컨텐츠3</h4></article>
-        </section>
-        <section>
-          <h3>반응형 사이트 오른쪽 컨텐츠</h3>
-          <article><h4>반응형 사이트 오른쪽 컨텐츠1</h4></article>
-          <article><h4>반응형 사이트 오른쪽 컨텐츠2</h4></article>
-          <article><h4>반응형 사이트 오른쪽 컨텐츠3</h4></article>
-        </section>
+      <section id="contents">
+        <div class="container">
+          <h2 class="ir_su">반응형 사이트 컨텐츠</h2>
+          <section id="cont_left">
+            <h3 class="ir_su">반응형 사이트 왼쪽 컨텐츠</h3>
+            <article class="column col1">
+              <h4 class="col_tit">Title</h4>
+              <p class="col_desc">이 곳은 설명 부분입니다.</p>
+              <!-- -->
+
+              <!-- // -->
+            </article>
+            <!-- col1 -->
+            <article class="column col2">
+              <h4 class="col_tit">Title</h4>
+              <p class="col_desc">이 곳은 설명 부분입니다.</p>
+              <!-- -->
+
+              <!-- // -->
+            </article>
+            <!-- col2 -->
+            <article class="column col3">
+              <h4 class="col_tit">Title</h4>
+              <p class="col_desc">이 곳은 설명 부분입니다.</p>
+              <!-- -->
+
+              <!-- // -->
+            </article>
+            <!-- col3 -->
+          </section>
+          <section id="cont_center">
+            <h3 class="ir_su">반응형 사이트 가운데 컨텐츠</h3>
+            <article class="column col4">
+              <h4 class="col_tit">Title</h4>
+              <p class="col_desc">이 곳은 설명 부분입니다.</p>
+              <!-- -->
+
+              <!-- // -->
+            </article>
+            <!-- col4 -->
+            <article class="column col5">
+              <h4 class="col_tit">Title</h4>
+              <p class="col_desc">이 곳은 설명 부분입니다.</p>
+              <!-- -->
+
+              <!-- // -->
+            </article>
+            <!-- col5 -->
+            <article class="column col6">
+              <h4 class="col_tit">Title</h4>
+              <p class="col_desc">이 곳은 설명 부분입니다.</p>
+              <!-- -->
+
+              <!-- // -->
+            </article>
+            <!-- col6 -->
+          </section>
+          <section id="cont_right">
+            <h3 class="ir_su">반응형 사이트 오른쪽 컨텐츠</h3>
+            <article class="column col7">
+              <h4 class="col_tit">Title</h4>
+              <p class="col_desc">이 곳은 설명 부분입니다.</p>
+              <!-- -->
+
+              <!-- // -->
+            </article>
+            <article class="column col8">
+              <h4 class="col_tit">Title</h4>
+              <p class="col_desc">이 곳은 설명 부분입니다.</p>
+              <!-- -->
+
+              <!-- // -->
+            </article>
+            <article class="column col9">
+              <h4 class="col_tit">Title</h4>
+              <p class="col_desc">이 곳은 설명 부분입니다.</p>
+              <!-- -->
+
+              <!-- // -->
+            </article>
+          </section>
+        </div>
       </section>
+      <!-- contents -->
     </main>
-    <footer>
-      <h2>반응형 사이트 푸터</h2>
+    <footer id="footer">
+      <div class="container">
+        <h2>반응형 사이트 푸터</h2>
+      </div>
     </footer>
+    <!-- footer -->
+
     <!-- JavaScript Libraries -->
     <script src="js/jquery.min_1.12.4.js"></script>
     <script src="js/modernizr-custom.js"></script>
